--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="navdetails">
           <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="https://github.com/palakxcode">Github</a></li>
             <li><a href="#">Contact</a></li>
             </a>
           </ul>
