--- a/index.html
+++ b/index.html
@@ -50,12 +50,13 @@
       <section class="secondsec">
         <div class="card">
         <div class="card2">
+          <div class="divtext"><b><a href="https://www.linkedin.com/in/palak-ramani-a3b147286/">LinkedIn</a></b></div>
         </div>
       </div>
       </section>
       <br>
-      <br>
-      <br>
+      <br><br>
+      <br><br>
     </main>
   </body>
 </html>
