--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="title">Palak Ramani | Web Developer</div>
         <div class="navdetails">
           <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="https://palakramani.netlify.app/">Home</a></li>
             <li><a href="https://github.com/palakxcode">Github</a></li>
             <li><a href="#">Contact</a></li>
             </a>
