--- a/index.html
+++ b/index.html
@@ -55,7 +55,14 @@
       </div>
       </section>
       <br>
-      <br><br>
+      <br>
+      <section class="thirdsec">
+        <div class="card">
+        <div class="card2">
+          <div class="divtext"><b><a href="https://github.com/palakxcode?tab=repositories">Projects</a></b></div>
+        </div>
+      </div>
+      </section>
       <br><br>
     </main>
   </body>
